--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "dotenv": "^7.0.0",
+    "eslint-config-rallycoding": "^3.2.0",
+    "history": "^4.9.0",
+    "node-sass": "^4.11.0",
     "react": "^16.8.6",
+    "react-currency-input": "^1.3.6",
     "react-dom": "^16.8.6",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
