--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "dotenv": "^7.0.0",
-    "eslint-config-rallycoding": "^3.2.0",
     "history": "^4.9.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
@@ -33,5 +32,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint-config-rallycoding": "^3.2.0"
+  }
 }
