--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "exchange-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://reysmerwvr.github.io/exchange-app",
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "dotenv": "^7.0.0",
+    "gh-pages": "^2.0.1",
     "history": "^4.9.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
